DB Based User Authentication : Added Users, Roles, Modified openapi-spec.yaml
