# src/main/resources/openapi-spec.yml
@@ -300,6 +300,144 @@ paths:
           description: Song Not found
           content: { }
 
+  /roles:
+    get:
+      tags:
+        - roles
+      summary: Fetch all roles
+      operationId: getRoles
+      responses:
+        200:
+          description: All roles
+          content:
+            application/json:
+              schema:
+                type: object
+                #items:
+                #$ref: '#/components/schemas/Role'
+        500:
+          description: Something Went Wrong
+        404:
+          description: No Roles Found
+          content: { }
+    post:
+      tags:
+        - roles
+      summary: "Add a new role"
+      operationId: createRole
+      requestBody:
+        description: Role details
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Role'
+      responses:
+        201:
+          description: Created Role Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                #$ref: '#/components/schemas/Role'
+        500:
+          description: Error Creating Role
+          content: { }
+
+  /roles/{roleid}:
+    get:
+      tags:
+        - roles
+      summary: Fetch role
+      operationId: getRole
+      parameters:
+        - name: roleid
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Role Fetched Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+        500:
+          description: internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Internal Server Error
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Bad Request
+        404:
+          description: Role not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Role Not Found
+
+    put:
+      tags:
+        - roles
+      summary: "update an existing role"
+      operationId: updateRole
+      parameters:
+        - name: roleid
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: role Data To Update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Role'
+      responses:
+        200:
+          description: Updated
+          content:
+            application/json:
+              schema:
+                type: object
+                #$ref: '#/components/schemas/role'
+
+
+    delete:
+      tags:
+        - roles
+      summary: Delete role
+      operationId: removeRole
+      parameters:
+        - name: roleid
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Deleted
+          content:
+            application/json:
+              schema:
+                type: object
+        404:
+          description: Role not found
+          content: { }
+
 
 components:
   schemas:
@@ -311,6 +449,11 @@ components:
           format: int64
         name:
           type: string
+        password:
+          type: string
+        role:
+          type: object
+          $ref: '#/components/schemas/Role'
         contact_no:
           type: string
         email:
@@ -321,6 +464,15 @@ components:
           format: date
           example: 2021-06-21
         image:
+          type: string
+
+    Role:
+      type: object
+      properties :
+        id:
+          type: integer
+          format: int64
+        role:
           type: string
 
     Song:
